--- a/MxOnline/templates/base.html
+++ b/MxOnline/templates/base.html
@@ -83,7 +83,7 @@
 								</a>
 							</li>
 							<li >
-								<a href="teachers-list.html">授课教师</a>
+								<a href="{% url 'org_list:teacherlist' %}">授课教师</a>
 							</li>
 							<li class="{% ifequal coures_org coures_org.id %}active {% endifequal %}" ><a href="{% url 'org_list:orgliste' %}">授课机构</a></li>
 						</ul>
