--- a/MxOnline/templates/course-comment.html
+++ b/MxOnline/templates/course-comment.html
@@ -7,8 +7,8 @@
             <ul  class="crumbs">
                 <li><a href="{% url 'index' %}">首页</a>></li>
                 <li><a href="">公开课程></a>></li>
-                <li><a href="">课程详情></a>></li>
-                <li><a href="">课程评论</a>></li>
+                <li><a href="">课程详情></a></li>
+                <li><a href="">课程评论></a></li>
             </ul>
         </div>
     </section>
@@ -66,15 +66,15 @@
                         {% for comments in all_comment %}
                             <li class="post-row">
                                 <div class="media">
-                                    <span target="_blank"><img src='{{ MEDIA_URL }}{{ comments. }}' width='40' height='40' /></span>
+                                    <span target="_blank"><img src='{{ MEDIA_URL }}{{comments.user.image}}' width='40' height='40' /></span>
                                 </div>
                                 <div class="bd">
                                     <div class="tit">
-                                        <span target="_blank">bobby</span>
+                                        <span target="_blank">{{ comments.user.nick_name }}</span>
                                     </div>
-                                    <p class="cnt">看到第三章了，虽然有些知识还不是听得很懂，但是感觉很有用的样子，想的是先听完一遍再说。然后再来听第二遍。最后想说老师棒棒哒！！！</p>
+                                    <p class="cnt">{{ comments.comments }}</p>
                                     <div class="footer clearfix">
-                                        <span title="创建时间" class="l timeago">时间：2016年12月13日 22:14</span>
+                                        <span title="创建时间" class="l timeago">时间：{{ comments.add_time }}</span>
                                     </div>
                                 </div>
                             </li>
@@ -130,46 +130,14 @@
                                 <div class="cp-tab-pannel js-comp-tab-pannel" data-pannel="course" style="display: block">
                                     <!-- img 200 x 112 -->
                                     <ul class="other-list">
-                                        <li class="curr">
-                                            <a href="/view/85?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/57035ff200014b8a06000338-240-135.jpg" alt="Java入门第一季">
-                                                <span class="name autowrap">Java入门第一季</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/view/110?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/5703604a0001694406000338-240-135.jpg" alt="Java入门第三季">
-                                                <span class="name autowrap">Java入门第三季</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/view/124?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/570360620001390f06000338-240-135.jpg" alt="Java入门第二季">
-                                                <span class="name autowrap">Java入门第二季</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/view/47?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/570765d90001bf1406000338-240-135.jpg" alt="Spring MVC起步">
-                                                <span class="name autowrap">Spring MVC起步</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/view/36?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/53e1d0470001ad1e06000338-240-135.jpg" alt="JavaScript入门篇">
-                                                <span class="name autowrap">JavaScript入门篇</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="cp-tab-pannel js-comp-tab-pannel" data-pannel="plan">
-                                    <ul class="other-list">
-                                        <li class="curr">
-                                            <a href="/course/programdetail/pid/31?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/56551e6700018b0c09600720-240-135.jpg" alt="Java工程师">
-                                                <span class="name autowrap">Java工程师</span>
-                                            </a>
-                                        </li>
+                                      {% for relate_cours in relate_couses %}
+                                    <li class="curr">
+                                        <a href="{% url 'course:course_detail' relate_cours.id %}" target="_blank">
+                                            <img src="{{ MEDIA_URL }}{{ relate_cours.image }}" alt="{{ relate_cours.name }}">
+                                            <span class="name autowrap">{{ relate_cours.name }}</span>
+                                        </a>
+                                    </li>
+                                {% endfor %}
                                     </ul>
                                 </div>
                             </div>
@@ -194,7 +162,43 @@
 
 {% endblock %}
 
-
+{% block custom_js %}
+<script>
+//添加评论
+$('#js-pl-submit').on('click', function () {
+    var comments = $("#js-pl-textarea").val()
+    if (comments == "") {
+        alert("评论不能为空")
+        return
+    }
+    $.ajax({
+        cache: false,
+        type: "POST",
+        url: "{% url 'course:course_Addcomment' %}",
+        data: {course_id: {{couse_it.id}}, comments: comments},
+        async: true,
+        beforeSend: function (xhr, settings) {
+            xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+        },
+        success: function (data) {
+            if (data.status == 'fail') {
+              if (data.msg == '用户未登录') {
+                  window.location.href = "{% url 'userlogin' %}";
+              } else {
+                  alert(data.msg)
+              }
+            } else if (data.status == 'success') {
+                alert('评论成功！')
+                window.location.reload();//刷新当前页面.
+            }
+        },
+        error: function(error) {
+          alert('ajax 失败!')
+        }
+    });
+});
+</script>
+{% endblock %}
 
 
 
