--- a/MxOnline/templates/base.html
+++ b/MxOnline/templates/base.html
@@ -76,16 +76,16 @@
 				<div class="nav">
 					<div class="wp">
 						<ul>
-							<li ><a href="index.html">首页</a></li>
-							<li >
+							<li {% if request.path|slice:'' == "/" %}class="active"{% endif %} ><a href="{% url 'index' %}">首页</a></li>
+							<li {% if request.path|slice:'7' == "/course" %}class="active"{% endif %}>
 								<a href="{% url 'course:course_list' %}">
 									公开课<img class="{% ifequal all_courses all_courses.id %}active {% endifequal %}" src="{% static 'images/nav_hot.png' %}">
 								</a>
 							</li>
-							<li >
+							<li {% if request.path|slice:'12' == "/org/teacher" %}class="active"{% endif %} >
 								<a href="{% url 'org_list:teacherlist' %}">授课教师</a>
 							</li>
-							<li class="{% ifequal coures_org coures_org.id %}active {% endifequal %}" ><a href="{% url 'org_list:orgliste' %}">授课机构</a></li>
+							<li {% if request.path|slice:'9' == "/org/list" %}class="active"{% endif %} ><a href="{% url 'org_list:orgliste' %}">授课机构</a></li>
 						</ul>
 					</div>
 				</div>
