--- a/MxOnline/templates/teachers-list.html
+++ b/MxOnline/templates/teachers-list.html
@@ -6,7 +6,7 @@
         <div class="wp">
             <ul  class="crumbs">
                 <li><a href="index.html">首页</a>></li>
-                <li>课程列表</li>
+                <li>教师列表</li>
             </ul>
         </div>
     </section>
@@ -18,17 +18,17 @@
 		<div class="butler_list layout">
 			<div class="head">
 				<ul class="fl tab_header">
-					<li class="active"><a href="?sort=">全部</a> </li>
-					<li ><a href="?sort=hot">人气 &#8595;</a></li>
+					<li {% ifequal sort '' %} class="active" {% endifequal %}><a href="?sort= ">全部</a> </li>
+					<li {% if  sort == 'hot' %} class="active2" {% endif %}><a href="?sort=hot">人气 &#8595;</a></li>
 				</ul>
-                <div class="fr butler-num">共<span class="key">9</span>人&nbsp;&nbsp;&nbsp;</div>
+                <div class="fr butler-num">共<span class="key">{{ all_tecahers }}</span>人&nbsp;&nbsp;&nbsp;</div>
 			</div>
-
+            {% for teacher in all_tecaher %}
                 <dl class="des">
 					<dt>
-						<a href="/org/teacher/detail/1/">
+						<a href="{% url 'teacher:techaerdetai' teacher.id %}">
                             <div class="picpic">
-                                <img width="100" height="100" class="scrollLoading" src="../media/teacher/2016/11/aobama_CXWwMef.png"/>
+                                <img width="100" height="100" class="scrollLoading" src="{{ MEDIA_URL }}{{ teacher.image }}"/>
                             </div>
                         </a>
 						<div class="btn">
@@ -43,81 +43,65 @@
 						</div>
 					</dt>
 					<dd>
-						<a href="/org/teacher/detail/1/">
-                            <h1>bobby<span class="key picbig">金牌讲师</span></h1>
+						<a href="{% url 'teacher:techaerdetai' teacher.id %}">
+                            <h1>{{ teacher.name }}<span class="key picbig">金牌讲师</span></h1>
                         </a>
 						<ul class="cont">
-							<li>工作年限：<span>5年</span></li>
-							<li>工作职位：<span>xxx</span></li>
-							<li>就职公司：<span>xxx&nbsp;</span></li>
-							<li>年龄：<span>18岁</span></li>
-							<li>教学特点：<span>xxx</span></li>
+							<li>工作年限：<span>{{ teacher.work_years }}</span></li>
+							<li>工作职位：<span>{{ teacher.work_position }}</span></li>
+							<li>就职公司：<span>{{ teacher.work_company }}&nbsp;</span></li>
+							<li>年龄：<span>{{ teacher.age }}</span></li>
+							<li>教学特点：<span>{{ teacher.points }}</span></li>
 						</ul>
 					</dd>
-                    <a class="buy buyservice" href="/org/teacher/detail/1/"><br/>查看<br/>详情</a>
+                    <a class="buy buyservice" href="{% url 'teacher:techaerdetai' teacher.id %}"><br/>查看<br/>详情</a>
                 </dl>
 
-
+            {% endfor %}
 
 		</div>
 		<div class="pageturn">
             <ul class="pagelist">
-
-
-
-
-
-                            <li class="active"><a href="?page=1">1</a></li>
-
-
-
-
-
-                            <li><a href="?page=2" class="page">2</a></li>
-
-
-
-
-                    <li class="long"><a href="?page=2">下一页</a></li>
-
+                           {% if tacahers.has_previous %}
+                    <li class="long"><a href="?{{ tacahers.previous_page_number.querystring }}">上一页</a></li>
+                 {% endif %}
+            {% for page in tacahers.pages %}
+                {% if page %}
+                    {% ifequal page tacahers.number %}
+                        <li class="active"><a href="?{{ page.querystring }}">{{ page }}</a></li>
+                    {% else %}
+                         <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
+                    {% endifequal %}
+                {% else %}
+                     <li class="none"><a href="">...</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if tacahers.has_next %}
+                 <li class="long"><a href="{{ tacahers.next_page_number.querystring }}">下一页</a></li>
+            {% endif %}
 
             </ul>
         </div>
 	</div>
 	<div class="right layout">
 		<div class="head">讲师排行榜</div>
-
+                {% for tecaher_sot in soted_tecaher %}
             <dl class="des">
                 <span class="num fl">1</span>
                 <a href="/diary/hk_detail/6/">
                     <dt>
-                        <img width="50" height="50" class="scrollLoading"  src="../media/teacher/2016/11/aobama_CXWwMef.png"/>
+                        <img width="50" height="50" class="scrollLoading"  src="{{ MEDIA_URL }}{{ tecaher_sot.image }}"/>
                     </dt>
                 </a>
                 <dd>
                     <a href="/diary/hk_detail/6/">
-                        <h1 title="bobby">bobby</h1>
+                        <h1 title="bobby">{{ tecaher_sot.name }}</h1>
                     </a>
-                    <p>工作年限：<span>5年</span></p>
+                    <p>工作年限：<span>{{ tecaher_sot.work_years }}</span></p>
                 </dd>
             </dl>
 
-            <dl class="des">
-                <span class="num fl">1</span>
-                <a href="/diary/hk_detail/6/">
-                    <dt>
-                        <img width="50" height="50" class="scrollLoading"  src="../media/teacher/2016/11/aobama.png"/>
-                    </dt>
-                </a>
-                <dd>
-                    <a href="/diary/hk_detail/6/">
-                        <h1 title="还是bobby">还是bobby</h1>
-                    </a>
-                    <p>工作年限：<span>5年</span></p>
-                </dd>
-            </dl>
-
-
+                {% endfor %}
 	</div>
     </div>
 </section>
